syntax = "proto3";

option csharp_namespace = "Mng.PlatformService.Grpc";

message GetAllRequest {}

message Platform {
  string id = 1;
  string name = 2;  
  string publisher = 3;
  string cost = 4;
}

message GetAllResponse {
  repeated Platform data = 1;
}

service Platforms {
  rpc GetAll (GetAllRequest) returns (GetAllResponse) {}
}